[package]
name = "query-shell"
description = "A simple library to get the user's shell."
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>", "John Meow <j0hn.meow@ya.ru>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Icelk/query-shell"
keywords = ["shell", "system"]
categories = ["command-line-interface", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { version = "0.15.9", default-features = false }
thiserror = "1.0.23"
