[package]
name = "query-shell"
description = "A simple library to get the user's shell."
version = "0.2.0"
authors = ["Icelk <main@icelk.dev>", "John Meow <j0hn.meow@ya.ru>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Icelk/query-shell"
keywords = ["shell", "system"]
categories = ["command-line-interface", "os"]

[dependencies]
sysinfo = { version = "0.23", default-features = false }
thiserror = "1"
